# planly

./: .gitignore  CLAUDE.md  README.md  dependency-reduced-pom.xml  install.sh  meson.build  pom.xml  uninstall.sh
data/: .gresource.xml  com.dprietob.planly.appdata.xml.in  com.dprietob.planly.desktop.in  meson.build  resources.gresource.xml
po/: POTFILES  es.po  meson.build
src/: Accels.vala  AccelsManager.vala  Actions.vala  ColorTheme.vala  Constants.vala  KeyboardShortcutsSetup.vala  Planly.vala  Shortcuts.vala  UserPreferences.vala  Utils.vala  config.vapi  constants.vala  meson.build  planly.vala  utils.vala
src/gui/: DrawMode.vala  HeaderBar.vala  Scene.vala  StatusBar.vala  ToolBar.vala  ToolType.vala  Window.vala  draw-mode.vala  scene.vala  window.vala
src/gui/components/: Circle.vala  Drawable.vala  Line.vala  Rect.vala  Shape.vala  Wall.vala  drawable.vala  line.vala
src/main/java/com/planly/: Constants.java  Planly.java  Utils.java
src/main/java/com/planly/gui/: Canvas.java  DrawMode.java  Scene.java  SceneListener.java  Window.java
src/main/java/com/planly/gui/components/: Drawable.java  Line.java
src/main/java/com/planly/project/: Project.java
src/project/: Project.vala  project.vala
src/resource/: resources.c
